--- a/src/styles/EditBook.css
+++ b/src/styles/EditBook.css
@@ -4,7 +4,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 70%;
-  background-color: #a1ddff;
+  background-color: #fff;
   border: 2px solid #000;
   border-radius: 1rem;
   padding: 2rem;
